--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -15,6 +15,21 @@
   url = {https://github.com/ropensci/bib2df},
 }
 
+@Manual{R-brms,
+  title = {brms: Bayesian Regression Models using Stan},
+  author = {Paul-Christian Bürkner},
+  year = {2023},
+  note = {R package version 2.19.0},
+  url = {https://CRAN.R-project.org/package=brms},
+}
+
+@Manual{R-cmdstanr,
+  title = {cmdstanr: R Interface to CmdStan},
+  author = {Jonah Gabry and Rok Češnovar},
+  year = {2022},
+  note = {https://mc-stan.org/cmdstanr/},
+}
+
 @Manual{R-colorspace,
   title = {colorspace: A Toolbox for Manipulating and Assessing Colors and Palettes},
   author = {Ross Ihaka and Paul Murrell and Kurt Hornik and Jason C. Fisher and Reto Stauffer and Claus O. Wilke and Claire D. McWhite and Achim Zeileis},
@@ -108,8 +123,8 @@ ggplot2},
 @Manual{R-jsonlite,
   title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
   author = {Jeroen Ooms},
-  year = {2022},
-  note = {R package version 1.8.4},
+  year = {2023},
+  note = {R package version 1.8.5},
   url = {https://CRAN.R-project.org/package=jsonlite},
 }
 
@@ -117,7 +132,7 @@ ggplot2},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.43},
   url = {https://yihui.org/knitr/},
 }
 
@@ -184,7 +199,7 @@ Cattell Scree Test},
 Research},
   author = {William Revelle},
   year = {2023},
-  note = {R package version 2.3.3},
+  note = {R package version 2.3.6},
   url = {https://personality-project.org/r/psych/
 https://personality-project.org/r/psych-manual.pdf},
 }
@@ -237,6 +252,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://github.com/hadley/reshape},
 }
 
+@Manual{R-rstan,
+  title = {rstan: R Interface to Stan},
+  author = {Jiqiang Guo and Jonah Gabry and Ben Goodrich and Sebastian Weber},
+  year = {2023},
+  note = {R package version 2.21.8},
+  url = {https://CRAN.R-project.org/package=rstan},
+}
+
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
@@ -249,7 +272,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-0},
+  note = {R package version 2.0-0},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -291,6 +314,42 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2023},
   note = {R package version 0.6.3},
   url = {https://CRAN.R-project.org/package=viridis},
+}
+
+@Article{brms2017,
+  title = {{brms}: An {R} Package for {Bayesian} Multilevel Models Using {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {80},
+  number = {1},
+  pages = {1--28},
+  doi = {10.18637/jss.v080.i01},
+  encoding = {UTF-8},
+}
+
+@Article{brms2018,
+  title = {Advanced {Bayesian} Multilevel Modeling with the {R} Package {brms}},
+  author = {Paul-Christian Bürkner},
+  journal = {The R Journal},
+  year = {2018},
+  volume = {10},
+  number = {1},
+  pages = {395--411},
+  doi = {10.32614/RJ-2018-017},
+  encoding = {UTF-8},
+}
+
+@Article{brms2021,
+  title = {Bayesian Item Response Modeling in {R} with {brms} and {Stan}},
+  author = {Paul-Christian Bürkner},
+  journal = {Journal of Statistical Software},
+  year = {2021},
+  volume = {100},
+  number = {5},
+  pages = {1--54},
+  doi = {10.18637/jss.v100.i05},
+  encoding = {UTF-8},
 }
 
 @Article{colorspace2020a,
@@ -420,7 +479,7 @@ https://personality-project.org/r/psych-manual.pdf},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger S. Bivand},
+  author = {Edzer J. Pebesma and Roger Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
