--- a/latex/main.tex
+++ b/latex/main.tex
@@ -218,7 +218,7 @@ Linguists, anthropologists and scholars of other fields have long remarked on th
 \begin{quotation}
 \noindent \emph{In [Fiji and West Polynesia] the maintenance of long-distance voyaging, both within island groups and between neighbouring island groups, can be attributed in large part to the rise of powerful chiefs. These chiefs had political, economic and social motives for maintaining long distance connections and were able to use their authority to drive the production of a food surplus which in turn could be used to support specialist craftsmen who could, among other things, build and sail large ocean-going canoes.} \citep[28]{pawley2007} \end{quotation}
 
-This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \citet{pearl1995causal} and \citet{mcelreath2020statistical}. This lets us view the chain of argumentation in a stylized and formal visualisation that can lead directly to statistical modelling and comparison between proposals (c.f. \citet{roberts2020chield}). Figure \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal in more detail. The connection between the rise of powerful chiefs and language richness is not direct, but mediated through a number of other factors. However, many of these factors are more difficult to measure, whereas ``political complexity'' is a variable in the Ethnographic Atlas (c.f. \citet{gray1998ethnographic}).
+This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acyclic Graph (DAG, c.f. \citet{pearl1995causal} and \citet{mcelreath2020statistical}. This lets us view the chain of argumentation in a stylized and formal visualisation that can lead directly to statistical modelling and comparison between proposals (c.f. \citet{roberts2020chield}). Fig. \ref{Predicting_lgs_DAG_andy} contains such a graph, based on the author's interpretation of Pawley's proposal in more detail. The connection between the rise of powerful chiefs and language richness is not direct, but mediated through a number of other factors. 
 
 \begin{figure}[ht]
 \centering
@@ -227,7 +227,9 @@ This proposal by \citet{pawley81, pawley2007} can be expressed in a Directed Acy
 \label{Predicting_lgs_DAG_andy}
 \end{figure}
 
-In a similar vein, \citet{curriemace2009} suggests that more stratified societies are correlated with larger language areas in Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometre is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reducing diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. The approach is different from \citet{pawley81, pawley2007}, but the scientific line of argumentation is congruent.
+Fig. \ref{Predicting_lgs_DAG_full} in \ref{appendix_DAG_def} contains a larger version that incorporates more of the suggested linkages beyond those suggested by Pawley, for example, that political complexity may affect the modularity and interconnectedness of social networks and this, in turn, affects language splitting. However, most of these factors are more difficult to measure or have not been measured (dashed outlines in the DAGs), whereas ``political complexity'' is a variable in the Ethnographic Atlas (c.f. \citet{gray1998ethnographic}).
+
+In a similar vein to Pawley, \citet{curriemace2009} suggests that more stratified societies are correlated with larger language areas in Africa and Eurasia. If one language covers a large area, then the number of languages per square kilometre is lower than otherwise --- the language density is lower. Their research can be interpreted to mean that more stratified societal structures are more capable of sustaining linguistic homogeneity over a larger geographical area (or possibly reducing diversity by cultural dominance and warfare). Greater maintenance of cultural homogeneity would result in less language splitting over larger areas, and therefore a larger language area correlates with greater stratification. The approach is different from \citet{pawley81, pawley2007}, but the scientific line of argumentation is congruent.
 
 Returning to language richness in Remote Oceania; a significant factor to consider is contact --- in particular with people from New Guinea, Solomons and the Bismarck archipelago. Prior to western colonisation, all indigenous communities of Remote Oceania spoke the languages of the Austronesian family (see Fig \ref{RO_overnight_coloured_dots}). This family has its ultimate origins in Taiwan, and spread into the region approximately 3-4,000 years ago (c.f. Fig. \ref{austro_expansion_bellwood}). The peopling of New Guinea, the Bismarck archipelago and Solomons however is older than that, and there is a great amount of language and cultural diversity there that may have influenced Austronesian people during and after their journeys east. 
 
@@ -343,11 +345,11 @@ Fig.~\ref{medium_model_predict} shows the actual observed language counts (purpl
 
 For the shared language island groups, political complexity (EA033) is the only variable that is significantly different from zero, i.e. the full coefficient distribution does not overlap zero. If we only consider the 95\% credibility interval, as is common practice in statistics, there is one additional term that does not overlap zero: shoreline in interaction with time-depth. Fig \ref{brms_SBZR_group_full_effect_ridge_panels} in Appendix \ref{appendix_supp_figs} shows the full distributions.
 
-If we drop one island group out at a time and re-run the model, we can asses which island groups represent the largest challenge to fitting the model. When Malakula (central Vanuatu), Kanaky (New Caledonia main island) and Santo (central Vanuatu) are left out, the difference becomes much lower (see Fig. \ref{brms_medium_dropped_out_plot_diff} in \ref{appendix_supp_figs}). They are the three island groups with the highest number of languages (see Fig \ref{polygon_plot_medium} in appendix \ref{sec:island_geo}). Political complexity remains the most important predicting factor in these three models, the coefficient does not overlap with zero.
+If we drop one island group out at a time and re-run the model, we can asses which island groups represent the largest challenge to fitting the model. Most of the island groups can be removed with little effect (see Fig. \ref{brms_medium_dropped_out_plot_diff} in \ref{appendix_supp_figs}), however, when Malakula (central Vanuatu), Kanaky (New Caledonia main island) and Santo (central Vanuatu) are left out, the difference becomes much lower. They are the three island groups with the highest number of languages (see Fig \ref{polygon_plot_medium} in appendix \ref{sec:island_geo}). Political complexity remains the most important predicting factor in these three models, the coefficient distributions do not overlap with zero.
 
 %and shoreline in interaction with time depth are the variables that have a significant impact, i.e. do not cross zero (see coefficent distributions in Figs.  and \ref{brms_medium_group_full_effect_ridge_panels} in appendix \ref{appendix_supp_figs}).
 
-For the overnight-sailing distances, several island groups are much larger than the previous grouping. Vanuatu (including Anuta and Tikopia) are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The absolute average difference between the predicted and observed number of languages is greater, 4.3. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
+For the overnight-sailing distances, several island groups are much larger than the previous grouping. Vanuatu (including Anuta and Tikopia) are all within the same group (see Fig \ref{polygon_plot_SBZR} in appendix \ref{sec:island_geo}; this is similar to the groups considered in \citet{pawley2007}). This also leads to a larger discrepancy between the number of languages, with Vanuatu and Temotu having 130 and S\={a}moa still only one. The absolute average difference between the predicted and observed number of languages is greater than for the previous grouping --- 4.3. Fig \ref{SBZR_model_predict} shows the prediction vs observed per island group.
 
 \begin{figure}[ht]
 \centering
@@ -356,18 +358,10 @@ For the overnight-sailing distances, several island groups are much larger than 
 \label{SBZR_model_predict}
 \end{figure}
 
-
-Shoreline
-Ea033
-Time
-Shoreline and time
-
-\ref{brms_SBZR_group_full_effect_ridge_panels}
+The most important variables in this model (i.e. coefficient distribution does not overlap 0) were: Shoreline, Political complexity, time depth and time-depth in interaction with shoreline (see Fig \ref{brms_SBZR_group_full_effect_ridge_panels}). However, if we drop out Vanuatu + Temotu this no longer holds. When Vanuatu + Temotu are left out, the coefficient distribution of political complexity overlaps zero. Instead, the environmental PCs, Shoreline and time depth are relevant predictors.\footnote{They are relevant if we consider the 95\% credibility interval. If we take the full distribution, all terms overlap zero.} When Vanuatu + Temotu are dropped out, the overall difference between predicted and observed values goes down significantly (from 4.3 to 2, see Fig. \ref{brms_SBZR_dropped_out_plot_diff}). If we ask this model that has been trained without the Vanuatu + Temotu data to predict how many languages are there, it grossly underestimates and proposes 7 languages (observed = 130). If we drop out any other island group (including Kanaky), political complexity remains a significant factor as it does in the model with all observations.
 
 
 
-
-In addition, we also did a robustness analysis of dropping out one island group at a time to see how this affects the overall performance. Overall, the average absolute difference between the observed number of languages and the predicted was 2.4 for the overnight sailing-groups and 1.5 for the shared language groups. Most island groups can be dropped out without any significant change, however there are some key island groups that stand out. If the overnight sailing distance group Vanuatu + Temotu is dropped, the difference between observed and predicted gets much smaller (0.8 as opposed to 2.4). If Malakula specifically is dropped from the merged-for-shared-languages-groups, the drop is not as steep (1 instead of 1.5). See figs \ref{brms_SBZR_dropped_out_plot_diff} and \ref{brms_medium_dropped_out_plot_diff} in appendix \ref{appendix_supp_figs}. Furthermore, if Vanuatu + Temotu is dropped as an observation, political complexity becomes non-relevant as a predictor (coefficient distribution crosses zero).
 
 %Most of the island groups in this dataset have only one language, and this seems to have caused some issues (despite the Negative Binomial distribution). The model does best at predicting languages in Polynesia (which is dominated by island groups with only one language). Islands groups in Polynesia can have a very long coastline (like the Paumotu archipelago of French Polynesia) or very short one (like Niue). There is not as much difference in shorelines between islands of Vanuatu. The model seems to have struggled with using shoreline to predict languages globally, even leading to the result that Shoreline as a standalone term comes out in the model as negatively predicting the number of languages (though not with a \emph{p} value that passes traditional thresholds of significance). 
 
@@ -383,17 +377,29 @@ In addition, we also did a robustness analysis of dropping out one island group 
 \FloatBarrier
 \section{Discussion}
 \label{pol_study_discisson}
-The results indicate that political complexity certainly is relevant for understanding the dynamics of language diversification in Remote Oceania, but further studies are needed --- especially regarding Vanuatu.
+The results indicate that political complexity could be relevant for understanding the dynamics of language diversification in Remote Oceania, but further studies are needed --- especially regarding Vanuatu. 
 
-Islands of Remote Oceania were grouped in two different ways: a) by shared language(s) and b) overnight distance. The two different ways of defining island groups generated different results. 
+When the island group Vanuatu + Temotu was dropped, the model for overnight sailing island groups no longer drew on political complexity as a relevant predictor of language richness. This may indicate that it primarily made use of the term to tell apart Vanuatu + Temotu from all other island groups. Vanuatu + Temotu is by far the island group with the most languages, 130, and it is dominated by societies that are classed as level 1 on the scale of vertical political complexity used by the Ethnographic Atlas \citep{gray1998ethnographic} and other studies \citep{watts_2018}, see Fig. \ref{pol_complex_map} in appendix \ref{appendix_pol_complex}).
 
-The dataset for the overnight distance island groups contained only two island groups with significant levels of languages (New Caledonia and Vanuatu + Temotu). The model did come close to predicting the correct number of languages in New Caledonia, but it severely underestimated the number of languages in Vanuatu + Temotu (even if it did predict this group to have the highest number). The majority of the rest of the sample was one language per island group, for both island groupings. As was mentioned earlier (section \ref{pol_complex_method}), skewed data of this kind (where only a few data-points have values much different than the rest) make it difficult to apply the correct analytical methods.
+Furthermore, if we tease apart the argument concerning political complexity (for example in the full DAG 
+\ref{Predicting_lgs_DAG_full} in \ref{appendix_DAG_def} or \ref{Predicting_lgs_DAG_andy} in section \ref{sec:previous_research}), we find that conceptually the link between the number of languages and political complexity is not direct. It could be mediated through other factors such as network modularity, propensity to maintain long-distance contact etc. 
 
-Both models include political complexity as a statistically significant factor for predicting language diversity in Remote Oceania which gives support to the hypothesis tested in this study. As expected, space and time also came out as significant factors. This indicates that the longer time people lived in a place and the longer shoreline/more land there was, the more languages arise. This is in line with previous research. \citet{curriemace2009} found that politically complex societies (``ethnolinguistic groups'') cover a larger geographical area than societies with low political complexity.  Assuming one language per society\footnote{By using language area as a measurement of the size of ethnolinguistic groups/societies, \citet{curriemace2009} make this assumption.}, a random 10 km$^2$ sample which has a high average value for political complexity (averaging over all language polygons that are found in the cell) will then have fewer languages. For example, the language Turkish is associated with a political complexity score of four \citep{d_place_all} and covers a large area whereas the many languages of the nearby Caucasus are generally coded as low political complexity and cover smaller areas \citep{ethnologue2005}. If we take a 10 km$^2$ sample in Anatolia (where Turkish is spoken) we find fewer languages and higher complexity on average than if we sample the same sized area in the Caucasus. Similarly, we find fewer languages per island group in Remote Oceania the higher the average political complexity.
+Maintaining long-distance contact can be a function of shared cultural identity. \citet[218-291]{skirgaard2020multilevel} notes that there are not only fewer languages in the island groups of Polynesia, but they are also more similar to each other lexically than languages in Vanuatu are. This relationship does not hold for grammatical features however, languages in Polynesia are similarly different from each other grammatically as languages of Vanuatu and other island groups in Remote Oceania are (as measured by Grambank features, \citep{grambank_release}). It has been suggested, by \citet{silverstein1981limits}, \citet{francois2011} and others (c.f. \ref{mansfield2023dialect}), that communities pay special attention to words and sound differences as emblematic of shared ties --- but grammar tends to fly under the radar in this respect. This difference between Vanuatu and Polynesia in terms of lexical dissimilarity and language richness, but the similarity in terms of grammatical diversification may indicate that the cause does indeed lie in attitudes and social network organisation rather than merely time and environmental factors.
 
-A counterexample to this trend globally is the presence of large areas covered by language societies with low political complexity and majority pastoralist subsistence strategies. \citet{curriemace2009} found such cases, but their results concluded that the best predictor for the overall global patterns in their data was still political complexity. Another possible counterexample might be regions of many societies with high complexity where each society covers a small area in close proximity to each other. This is arguably the case for historic city states in Ancient Greece as these covered fairly small areas and had many political levels (see \citet{cartwright_2013}, and \citet[19]{sealey1976history}). However, the city states of Ancient Greece are usually all described as speaking different dialects of the same language, not different languages. This means that the language area of Ancient Greek (which is what \citet{curriemace2009} measured) would still be large and the average political complexity high, which would support their hypothesis.
+\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate (and possibly assimilate) them. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language that is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
 
-\citet{curriemace2009} argue that the reason behind their results (higher political complexity = larger language areas) is that societies with higher political complexity are more likely to be able to replace existing groups in an area, or otherwise incorporate them. In his theory of language diversification in Remote Oceania, \citet{pawley2007} writes that the islands of Vanuatu, New Caledonia and Western Polynesia were colonised in a similar manner but that the divergence was slowed down in West Polynesia and Fiji due to the rise of powerful political leaders who had a vested interest in the \emph{maintenance} of long distance voyaging and large scale food production. It may also be the case that diversity in Polynesia was reduced by later expansionist efforts by societies with higher political complexity. For example, the island of Niuafo'ou which lies between Tonga, 'Uvea and S\={a}moa is home to a language which is most closely related to 'Uvean. This language has however become \emph{more} similar to Tongan during the period of Tongan domination in the area 1000-1300's (see \citet{aswani1998tongan} and \citep[2-9]{tuskamoto_niuafoou}). It may be that politically complex societies do not only \emph{maintain} homogeneity by continuing being in contact after first settlement, but can also reduce diversity which emerges after settlement through incorporation and cultural dominance later.
+Whatever the political complexity variable is tracking, it is clear that it is one of the variables that most clearly picks out Vanuatu and Vanuatu is the place with the most languages. Where did this difference in societal organisation come from? As previous studies have indicated (e.g. \citet{lynch1981melanesian}), the answer may lie in contact with people from New Guinea and Solomons. It is possible that contact with non-Austronesian speaking communities further west brought with it societal changes to Vanuatu and some other islands that had made history go a different way there than in islands further east. Besides the possible cultural influence on attitudes and societal organisation, they may also have brought with them their own cultural heritage which would add to the diversity in itself.
+
+%In order to understand language diversification, we need to understand the steps of the process. Before languages have split into different mutually unintelligible varieties, 
+
+%The \citet{WLH1968}
+
+
+
+%Both models include political complexity as a statistically significant factor for predicting language diversity in Remote Oceania which gives support to the hypothesis tested in this study. As expected, space and time also came out as significant factors. This indicates that the longer time people lived in a place and the longer shoreline/more land there was, the more languages arise. This is in line with previous research. \citet{curriemace2009} found that politically complex societies (``ethnolinguistic groups'') cover a larger geographical area than societies with low political complexity.  Assuming one language per society\footnote{By using language area as a measurement of the size of ethnolinguistic groups/societies, \citet{curriemace2009} make this assumption.}, a random 10 km$^2$ sample which has a high average value for political complexity (averaging over all language polygons that are found in the cell) will then have fewer languages. For example, the language Turkish is associated with a political complexity score of four \citep{d_place_all} and covers a large area whereas the many languages of the nearby Caucasus are generally coded as low political complexity and cover smaller areas \citep{ethnologue2005}. If we take a 10 km$^2$ sample in Anatolia (where Turkish is spoken) we find fewer languages and higher complexity on average than if we sample the same sized area in the Caucasus. Similarly, we find fewer languages per island group in Remote Oceania the higher the average political complexity.
+
+%A counterexample to this trend globally is the presence of large areas covered by language societies with low political complexity and majority pastoralist subsistence strategies. \citet{curriemace2009} found such cases, but their results concluded that the best predictor for the overall global patterns in their data was still political complexity. Another possible counterexample might be regions of many societies with high complexity where each society covers a small area in close proximity to each other. This is arguably the case for historic city states in Ancient Greece as these covered fairly small areas and had many political levels (see \citet{cartwright_2013}, and \citet[19]{sealey1976history}). However, the city states of Ancient Greece are usually all described as speaking different dialects of the same language, not different languages. This means that the language area of Ancient Greek (which is what \citet{curriemace2009} measured) would still be large and the average political complexity high, which would support their hypothesis.
+
 
 \citet{watts_2018} found that politically complex societies in Oceania became Christian at a faster speed. This may indicate that changes propagate through a population quicker if the society is not egalitarian. If Christianity spreads faster in societies with higher complexity, it is possible to reason that other changes also might spread faster. If changes propagate quickly throughout a population, that leaves less possibility for diversification through natural drift or groups in the periphery staying more archaic compared to the centre. This interpretation relies on the understanding that the variable for political complexity (EA033) reveals something not only about jurisdictional power relationships in a given society, but also captures something about the social network of \emph{all} of its members (not just the leaders). Under this theory, people living in societies with higher political complexity would be able to travel further and have wider ranging social networks, which in turn would lead to greater internal cultural homogeneity.
 
@@ -621,7 +627,7 @@ However, this way of grouping islands does not take into account currents and wi
 
 \begin{sidewaysfigure}[p]
 \centering
-\includegraphics[width=26cm]{polygon_SBZR_group_map.png}
+\includegraphics[width=\textwidth]{polygon_SBZR_group_map.png}
 \caption{{Distribution of languages per overnight sailing distance island group.}}
 \label{polygon_plot_SBZR}
 \end{sidewaysfigure}
@@ -632,7 +638,7 @@ However, this way of grouping islands does not take into account currents and wi
 
 \begin{sidewaysfigure}[p]
 \centering
-\includegraphics[width=26cm]{polygon_medium_group_map_vanuatu_mh_inset.png}
+\includegraphics[width=\textwidth]{polygon_medium_group_map_vanuatu_mh_inset.png}
 \caption{{Distribution of languages per shared language island group. Island groups with only one language do not have a label as this cluttered the visualisation. All island groups without a label have 1 language.}}
 \label{polygon_plot_medium}
 \end{sidewaysfigure}
