--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -78,6 +78,14 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
+@Manual{R-fs,
+  title = {fs: Cross-Platform File System Operations Based on libuv},
+  author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
+  year = {2023},
+  note = {R package version 1.6.2},
+  url = {https://CRAN.R-project.org/package=fs},
+}
+
 @Manual{R-ggalt,
   title = {ggalt: Extra Coordinate Systems, Geoms, Statistical Transformations,
 Scales and Fonts for ggplot2},
@@ -123,8 +131,8 @@ ggplot2},
 @Manual{R-jsonlite,
   title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
   author = {Jeroen Ooms},
-  year = {2023},
-  note = {R package version 1.8.5},
+  year = {2022},
+  note = {R package version 1.8.4},
   url = {https://CRAN.R-project.org/package=jsonlite},
 }
 
@@ -132,7 +140,7 @@ ggplot2},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.43},
+  note = {R package version 1.42},
   url = {https://yihui.org/knitr/},
 }
 
@@ -158,14 +166,6 @@ ggplot2},
   year = {2023},
   note = {R package version 7.3-60},
   url = {http://www.stats.ox.ac.uk/pub/MASS4/},
-}
-
-@Manual{R-modEvA,
-  title = {modEvA: Model Evaluation and Analysis},
-  author = {Barbosa A.M. and Brown J.A. and Jimenez-Valverde A. and Real R.},
-  year = {2023},
-  note = {R package version 3.9.3},
-  url = {http://modeva.r-forge.r-project.org/},
 }
 
 @Manual{R-naniar,
@@ -199,7 +199,7 @@ Cattell Scree Test},
 Research},
   author = {William Revelle},
   year = {2023},
-  note = {R package version 2.3.6},
+  note = {R package version 2.3.3},
   url = {https://personality-project.org/r/psych/
 https://personality-project.org/r/psych-manual.pdf},
 }
@@ -272,7 +272,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 2.0-0},
+  note = {R package version 1.6-0},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -444,18 +444,6 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
-@Article{modEvA2013,
-  title = {New measures for assessing model equilibrium and prediction mismatch in species distribution models},
-  author = {A. Marcia Barbosa and Raimundo Real and A. Roman Munoz and Jennifer A. Brown},
-  journal = {Diversity and Distributions},
-  year = {2013},
-  volume = {19},
-  number = {10},
-  pages = {1333--1338},
-  doi = {10.1111/ddi.12100},
-  url = {https://onlinelibrary.wiley.com/doi/full/10.1111/ddi.12100},
-}
-
 @Article{naniar2023,
   title = {Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations},
   author = {Nicholas Tierney and Dianne Cook},
@@ -479,7 +467,7 @@ https://personality-project.org/r/psych-manual.pdf},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger Bivand},
+  author = {Edzer J. Pebesma and Roger S. Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
