--- a/latex/BRMS_effects_medium.tex
+++ b/latex/BRMS_effects_medium.tex
@@ -1,19 +1,19 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Mon Aug 21 12:01:43 2023
-\begin{tabular}{p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}
+% Mon Aug 21 12:20:30 2023
+\begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
-term & Estimate & Est.Error & l-95% CI & u-95% CI & Does 95% interval straddle zero? & Bulk ESS & Tail ESS \\ 
+term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Does 95\% interval straddle zero? & Bulk ESS & Tail ESS \\ 
   \midrule
-EA033 & -1 & 0 & -1 & -1 & no & 86903 & 78681 \\ 
-  environ\_PC1 & -0 & 0 & -1 & 0 & yes & 62723 & 72820 \\ 
-  environ\_PC1:Shoreline & 0 & 0 & -0 & 0 & yes & 56177 & 72114 \\ 
-  environ\_PC2 & 0 & 0 & -0 & 1 & yes & 55716 & 68364 \\ 
-  environ\_PC3 & 0 & 0 & -0 & 0 & yes & 77362 & 78385 \\ 
-  Intercept & 0 & 0 & -0 & 1 & yes & 69184 & 73793 \\ 
-  Time\_depth & 0 & 0 & 0 & 1 & yes & 85944 & 77273 \\ 
-  Shoreline & 1 & 0 & 0 & 1 & yes & 57283 & 69766 \\ 
-  Shoreline:environ\_PC2 & -0 & 0 & -1 & 0 & yes & 60025 & 67019 \\ 
-  Shoreline:environ\_PC3 & 0 & 0 & -0 & 0 & yes & 75070 & 75363 \\ 
-  Shoreline:Time\_depth & 0 & 0 & 0 & 1 & yes & 90331 & 73842 \\ 
+EA033 & -0.848 & 0.119 & -1.089 & -0.621 & no & 86903.116 & 78680.772 \\ 
+  environ\_PC1 & -0.339 & 0.184 & -0.700 & 0.022 & yes & 62722.893 & 72819.676 \\ 
+  environ\_PC1:Shoreline & 0.173 & 0.142 & -0.096 & 0.460 & yes & 56177.329 & 72113.543 \\ 
+  environ\_PC2 & 0.191 & 0.199 & -0.202 & 0.577 & yes & 55715.732 & 68364.257 \\ 
+  environ\_PC3 & 0.166 & 0.144 & -0.117 & 0.448 & yes & 77362.236 & 78385.290 \\ 
+  Intercept & 0.260 & 0.168 & -0.080 & 0.583 & yes & 69183.952 & 73793.051 \\ 
+  Time depth & 0.482 & 0.136 & 0.224 & 0.758 & yes & 85944.050 & 77272.546 \\ 
+  Shoreline & 0.640 & 0.175 & 0.300 & 0.992 & yes & 57283.173 & 69766.242 \\ 
+  Shoreline:environ\_PC2 & -0.343 & 0.190 & -0.700 & 0.048 & yes & 60024.526 & 67019.249 \\ 
+  Shoreline:environ\_PC3 & 0.097 & 0.124 & -0.158 & 0.330 & yes & 75070.000 & 75363.372 \\ 
+  Shoreline:Time depth & 0.452 & 0.128 & 0.210 & 0.714 & yes & 90331.190 & 73841.991 \\ 
    \bottomrule
 \end{tabular}
