Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -886,7 +886,7 @@ This dataset does not contain information on population size because there is no
 
 \begin{sidewaysfigure}[p] 
 
-\includegraphics[width=23cm]{Predicting_lgs_DAG_full.png}
+\includegraphics[width=19cm]{Predicting_lgs_DAG_full.png}
 \caption{Directed Acyclic Graph of the variables in this study. Blue = variable to be predicted (response).}
 \label{Predicting_lgs_DAG_full}
 \end{sidewaysfigure}
@@ -896,8 +896,9 @@ This dataset does not contain information on population size because there is no
 \subsection{BRMS model tables}
 \label{BRMS_model_tables}
 
-
-
+\begin{landscape}
+\include{latex/BRMS_effects_medium}
+\end{landscape}
 
 \newpage
 \subsection{Supplementary figures}
