--- a/latex/BRMS_effects_medium.tex
+++ b/latex/BRMS_effects_medium.tex
@@ -1,5 +1,7 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Mon Aug 21 12:30:52 2023
+% Mon Aug 21 12:37:10 2023
+\begin{table}[ht]
+\centering
 \begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
 term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Does 95\% interval straddle zero? & Bulk ESS & Tail ESS \\ 
@@ -17,3 +19,6 @@ EA033 & -0.848 & 0.119 & -1.089 & -0.621 & no & 86903.116 & 78680.772 \\
   Shoreline:Time depth & 0.452 & 0.128 & 0.210 & 0.714 & yes & 90331.190 & 73841.991 \\ 
    \bottomrule
 \end{tabular}
+\caption{Table of BRMS model outcomes, shared-language island groups (all observations included).} 
+\label{BRMS_effects_medium}
+\end{table}
