--- a/latex/BRMS_effects_SBZR.tex
+++ b/latex/BRMS_effects_SBZR.tex
@@ -1,5 +1,7 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Mon Aug 21 12:30:52 2023
+% Mon Aug 21 12:37:10 2023
+\begin{table}[ht]
+\centering
 \begin{tabular}{p{5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}p{2cm}}
   \toprule
 term & Estimate & Est.Error & l-95\% CI & u-95\% CI & Does 95\% interval straddle zero? & Bulk ESS & Tail ESS \\ 
@@ -15,3 +17,6 @@ EA033 & -0.918 & 0.063 & -1.044 & -0.797 & no & 86638.570 & 78681.590 \\
   Shoreline:Time depth & 0.823 & 0.133 & 0.570 & 1.090 & yes & 63779.842 & 72874.694 \\ 
    \bottomrule
 \end{tabular}
+\caption{Table of BRMS model outcomes, overnight-distance island groups (all observations included).} 
+\label{BRMS_effects_SBZR}
+\end{table}
