Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -897,8 +897,14 @@ This dataset does not contain information on population size because there is no
 \label{BRMS_model_tables}
 
 \begin{landscape}
-\include{latex/BRMS_effects_medium}
+\input{latex/BRMS_effects_medium}
 \end{landscape}
+
+\begin{landscape}
+\input{latex/BRMS_effects_SBZR}
+\end{landscape}
+
+
 
 \newpage
 \subsection{Supplementary figures}
